src/generators/snapshots/scrut__generators__generator__tests__update__cram__complex_unchanged.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test
  $ the command
  line * (glob+)

